# kursplan-tracker

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
backend/: .env.example  Makefile  check_env.py  pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/api/: account.py  clubs.py  invitations.py  plans.py
backend/app/models/: schemas.py
backend/app/services/: email.py  supabase.py
frontend/: Makefile  package-lock.json  package.json  vitest.config.ts
supabase/: schema.sql  seed.sql
supabase/email-templates/: confirm-signup.html
supabase/migrations/: 001_initial_schema.sql  002_plan_editor_enhancements.sql  003_locations_maps_url_invite_rpc.sql  004_fix_creator_membership_rls_and_session_type.sql  005_session_types_table_and_nullable_topic.sql  006_session_cancelled_flag.sql  007_recurring_sessions.sql  008_location_fk_set_null.sql  009_template_generated_through.sql  010_extend_recurring_sessions_cron.sql  011_auto_accept_invitations.sql  012_delete_account_rpc.sql  013_restrict_club_creation.sql  014_guest_trainers.sql  015_profiles_public_trainer_read.sql  016_session_color.sql  017_virtual_trainers.sql  018_security_fixes.sql  019_teilnehmer.sql  020_fix_club_creation_policy.sql  021_club_creator_whitelist.sql  022_teilnehmer_unique_name.sql  023_reset_training_session_sort_order.sql  024_add_probetraining_count.sql  025_add_notes_visible_dow.sql  026_trainer_availability.sql  027_teilnehmer_metadata.sql  028_sessions_events_and_media.sql  029_admin_dashboard.sql  030_training_session_completion.sql  034_feedback.sql  (+4 more)
(+109 files in other folders)
